<resources>
    <string name="app_name">Ten Bru CV</string>

    <string name="action_settings">Settings</string>
    <string name="knowledgements">Knowledge</string>
    <string name="information">General</string>
    <string name="expericence">Experience</string>
    <string name="my_name">Enrique Ten Bru</string>
    <string name="my_profession">Android Developer</string>
    <string name="studies">Studies</string>
    <string name="my_studies">Senior Telecomunications Engineer</string>
    <string name="my_university">Universitat Politècnica de València</string>
    <string name="contact">Contact</string>
    <string name="languages">Languages</string>
    <string name="description">Personal Description</string>
    <string name="phone_number">+34667909320</string>
    <string name="email_adress">kike10bru@gmail.com</string>
    <string name="linkedin_adress">https://www.linkedin.com/in/enrique-ten-bru-728b68116</string>
    <string name="linkedin">Linkedin Profile</string>
    <string name="spanish_level">Spanish: Native</string>
    <string name="catalan_level">Catalan: Native</string>
    <string name="english">English: B1/B2</string>
    <string name="my_description">Age: 29 years\n City of birth: Canals (Valencia)\nCity residence: Madrid\n\nHobbies: Technology, clean programming, android news, practicing sports, classical music (I play the clarinet from 10 years), learn languages ​​and philosophy.\n\nPersonal Description: When I finished my studies as a telecommunications engineer, I wanted to move around the world of Android technology, so I started to train self-taught in my free time. Four months later I upload my first app at Play Store, Concerts ON.\nThis app was done with a double purpose: to give the smallest groups the chance to advertise and to reach more people and, above all, to learn everything related to The world of mobile application development. \nNowadays, I am working on an Android project and I\'m sure that my professional career is going only in that direction, mobility projects (I am open to learning new technologies: React Native, Xamarin, Swift, AngularJS (I already have some experience in this one). \nI consider myself a proactive and over-enthusiastic person with a lot of desire to learn and continue to grow as a professional. Of course, I see my future beyond being a programmer analyst, as I am today. I would like to take charge of the organization of mobility projects (I have already done it on a small scale, in Correos I have a person in my charge), but I think that to be able to organize a project well, it is necessary to know the technology used in it, so I continue to train day by day, reading weeklies like Android Weekly and following different technology pages on facebook or twitter. \nTo finish, comment that I have good communicative ability, which has always been very useful to me to talk with the client.</string>
    <string name="tel">tel:</string>
    <string name="linkedin_url_app">linkedin://profile/enrique-ten-bru-728b68116</string>
    <string name="linkedin_url">http://www.linkedin.com/profile/view?id=enrique-ten-bru-728b68116</string>
    <string name="androidstr">Android</string>
    <string name="angularjs">AngularJS</string>
    <string name="sql">SQL</string>
    <string name="others">Others</string>
    <string name="components"><![CDATA[Components & Inteface]]></string>
    <string name="libraries">Libraries</string>
    <string name="tools">Development Tools</string>
    <string name="ok">OK</string>
    <string name="is_translated_english">The CV is translated english actually</string>
    <string name="is_translated_catalan">El currículum ja està traduït al català</string>
    <string name="is_translated_spanish">El currículum ya está traducido al castellano</string>
    <string name="part_no_developed">This part is not developed yet</string>
</resources>
