<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="1.0">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_destinatario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorThirdLight"
        android:layout_gravity="center"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/cardCornerRadiusSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/linear_lyt_title_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_card_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/cardViewTitle"
                    android:text="@string/studies"/>

                <ImageButton
                    android:id="@+id/btn_collapse_education_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button_circular_primary_color"
                    app:srcCompat="@drawable/ic_arrow_drop_down_24dp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/content_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:layout_below="@+id/linear_lyt_title_education"
                android:visibility="gone">

                <TextView
                    android:id="@+id/studies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_studies"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_text_card"
                    android:text="@string/my_university"
                    android:textSize="@dimen/text_size_medium" />

            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>