<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="1.0">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorThirdLight"
        card_view:cardCornerRadius="@dimen/cardCornerRadiusSize"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/linear_lyt_title_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_card_view"
                android:layout_marginTop="@dimen/margin_card_view"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_collapse_languages_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_circular_primary_color"
                    app:srcCompat="@drawable/ic_arrow_drop_down_24dp" />

                <TextView
                    android:id="@+id/title_languages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:theme="@style/cardViewTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/content_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:animateLayoutChanges="true"
                android:layout_below="@+id/linear_lyt_title_languages"
                android:visibility="gone">


                <ImageButton
                    android:id="@+id/btn_spanish"
                    android:layout_width="@dimen/icon_language_size"
                    android:layout_height="@dimen/icon_language_size"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_esp" />

                <ImageButton
                    android:id="@+id/btn_catalan"
                    android:layout_width="@dimen/icon_language_size"
                    android:layout_height="@dimen/icon_language_size"
                    android:layout_marginTop="@dimen/margin_text_card"
                    android:layout_below="@id/btn_spanish"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_cat" />


                <ImageButton
                    android:id="@+id/btn_english"
                    android:layout_width="@dimen/icon_language_size"
                    android:layout_height="@dimen/icon_language_size"
                    android:layout_below="@id/btn_catalan"
                    android:layout_marginTop="@dimen/margin_text_card"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_eng" />

                <TextView
                    android:id="@+id/title_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/btn_english"
                    android:layout_marginStart="@dimen/icon_text_margin"
                    android:text="@string/english"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_alignTop="@+id/btn_english" />

                <TextView
                    android:id="@+id/title_catalan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/catalan_level"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_alignBottom="@+id/btn_catalan"
                    android:layout_alignStart="@+id/title_english" />

                <TextView
                    android:id="@+id/title_spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/spanish_level"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_above="@+id/btn_catalan"
                    android:layout_alignStart="@+id/title_catalan" />


            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>