<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    app:layout_collapseMode="parallax"
    app:layout_collapseParallaxMultiplier="1.0">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardElevation"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorThirdLight"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="@dimen/cardCornerRadiusSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:id="@+id/linear_lyt_title_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_card_view"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/margin_card_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/cardViewTitle"
                    android:text="@string/contact"/>

                <ImageButton
                    android:id="@+id/btn_collapse_contact_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/button_circular_primary_color"
                    app:srcCompat="@drawable/ic_arrow_drop_down_24dp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/content_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linear_lyt_title_contact"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/lyt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/btn_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_call_24dp" />

                    <TextView
                        android:id="@+id/title_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/rippleTextEffect"
                        android:layout_marginStart="@dimen/icon_text_margin"
                        android:text="@string/phone_number"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_text_card"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/btn_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_email_24dp" />

                    <TextView
                        android:id="@+id/title_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/rippleTextEffect"
                        android:layout_marginStart="@dimen/icon_text_margin"
                        android:text="@string/email_adress" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_text_card"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ImageButton
                        android:id="@+id/btn_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/linkedin_box" />

                    <TextView
                        android:id="@+id/title_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/rippleTextEffect"
                        android:layout_marginStart="@dimen/icon_text_margin"
                        android:text="@string/linkedin"/>

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>